changes to template engine

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "main": "app.js",
   "scripts": {
-    "start:dev": "nodemon --env-file=.env ./src/app.js --config nodemon.json "
+    "start": "nodemon --env-file=.env ./src/app.js --config nodemon.json "
   },
   "keywords": [
     "ejs",
@@ -16,6 +16,7 @@
   "author": "Frederick Roegiers",
   "license": "ISC",
   "dependencies": {
+    "ejs": "^3.1.10",
     "express": "^4.21.2",
     "nodemon": "^3.1.9"
   }
